# Delaunay

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Makefile.am  build.sh  configure.ac
src/: Application.cpp  Application.h  GUI.cpp  GUI.h  Makefile.am  build.sh  fragment_shader.txt  imgui.ini  main.cpp  shader.vert  vertex_shader.txt  working_imgui_opengl3.cpp
src/src_xiw/: Makefile
src/tests/: Makefile
src2/doc/: Makefile
src2/examples/: Makefile
src2/man/: Makefile
src2/scripts/: Makefile
src2/src/: Makefile
src_xiw/: build.sh  config.cache  config.h  config.status  libtool  main
src_xiw/src_xiw/: Makefile
tests/: Makefile.am  demo.cpp  gtest.cpp
